chore(updater): update version to 2.0.0-beta.3 and fix update error handling
* Updated version number and download URLs for all platforms.
* Enhanced error handling in `checkWoxVersion` to include specific update errors.
* Added new language strings for auto-update status in multiple languages.
* Refactored UI color handling in the about view for better theme support.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -225,6 +225,7 @@
   "plugin_doctor_version_update_notes": "Notas da Atualização",
   "plugin_doctor_version_update_error": "Falha na verificação de atualização",
   "plugin_doctor_version_no_release_notes": "Não há notas de lançamento disponíveis para esta atualização.",
+  "plugin_doctor_version_auto_update_disabled": "Atualização automática desativada",
   "plugin_doctor_accessibility": "Acessibilidade",
   "plugin_doctor_accessibility_required": "Você precisa conceder permissão de Acessibilidade ao Wox para usar este plugin",
   "plugin_doctor_accessibility_open_settings": "Abrir configurações de acessibilidade",
