--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -227,6 +227,7 @@
   "plugin_doctor_version_update_notes": "Update Notes",
   "plugin_doctor_version_update_error": "Update Check Failed",
   "plugin_doctor_version_no_release_notes": "No release notes available for this update.",
+  "plugin_doctor_version_auto_update_disabled": "Auto update is disabled",
   "plugin_doctor_accessibility": "Accessibility",
   "plugin_doctor_accessibility_required": "You need to grant Wox Accessibility permission to use this plugin",
   "plugin_doctor_accessibility_open_settings": "Open Accessibility Settings",
