--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -201,6 +201,7 @@
   "plugin_sys_open_wox_settings": "Abrir configurações do Wox",
   "plugin_sys_open_system_settings": "Abrir configurações do sistema",
   "plugin_sys_performance_cpu_profiling": "Perfil de desempenho da CPU",
+  "plugin_sys_performance_memory_profiling": "Perfil de desempenho de memória",
   "plugin_sys_delete_image_cache": "Excluir todo o cache de imagem",
   "plugin_sys_open_plugin_settings": "Abrir configurações do plugin %s",
   "plugin_websearch_trigger_keyword": "Palavra-chave",
