refactor(clipboard): reduce memory usage
- Implemented ClipboardPlugin to manage clipboard history including text and image data.
- Added functionality to keep track of clipboard history with options to retain text and image history.
- Introduced a SQLite database (ClipboardDB) to store clipboard records, including metadata such as file path, dimensions, and size for images.
- Implemented migration from legacy clipboard data to the new database structure.
- Added settings for managing clipboard history retention duration and primary action preferences.
- Enhanced query capabilities to retrieve recent and favorite clipboard records.
- Implemented periodic cleanup routine to remove expired records and orphaned cache files.
- Added localization support for new features in Chinese (zh_CN).

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -188,6 +188,7 @@
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
   "plugin_clipboard_image_height": "Image height",
+  "plugin_clipboard_image_size": "Image size",
   "plugin_clipboard_keep_text_history": "Keep text history for",
   "plugin_clipboard_days": "days",
   "plugin_clipboard_keep_image_history": "Keep image history for",
