feat(setting): add last query mode options, fix #4234
* Introduced new settings for last query mode in the Wox settings UI.
* Added options to preserve the last query or start with an empty query.
* Updated relevant localization files for English, Portuguese, Russian, and Chinese.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -9,6 +9,10 @@
   "ui_selection_hotkey_tips": "Hotkeys to do actions on selected text or files",
   "ui_use_pinyin": "Use Pinyin",
   "ui_use_pinyin_tips": "When selected, Wox will convert Chinese into Pinyin",
+  "ui_last_query_mode": "Last Query Mode",
+  "ui_last_query_mode_tips": "Choose the default behavior when opening Wox",
+  "ui_last_query_mode_preserve": "Preserve last query",
+  "ui_last_query_mode_empty": "Always start with empty query",
   "ui_hide_on_lost_focus": "Hide on lost focus",
   "ui_hide_on_lost_focus_tips": "When selected, Wox will hide when it loses focus",
   "ui_hide_on_start": "Hide on start",
