--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -9,6 +9,10 @@
   "ui_selection_hotkey_tips": "Atalhos para executar ações em texto ou arquivos selecionados",
   "ui_use_pinyin": "Use Pinyin",
   "ui_use_pinyin_tips": "Quando selecionado, o Wox vai converter Chinês em Pinyin",
+  "ui_last_query_mode": "Modo da Última Consulta",
+  "ui_last_query_mode_tips": "Escolha o comportamento padrão ao abrir o Wox",
+  "ui_last_query_mode_preserve": "Preservar última consulta",
+  "ui_last_query_mode_empty": "Sempre começar com consulta vazia",
   "ui_hide_on_lost_focus": "Ocultar na perda do foco",
   "ui_hide_on_lost_focus_tips": "Quando selecionado, o Wox será ocultado na perda do foco",
   "ui_hide_on_start": "Ocultar ao iniciar",
