--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -9,6 +9,10 @@
   "ui_selection_hotkey_tips": "Горячие клавиши для выполнения действий с выбранным текстом или файлами",
   "ui_use_pinyin": "Использовать Pinyin",
   "ui_use_pinyin_tips": "При выборе Wox будет преобразовывать Китайский в Pinyin",
+  "ui_last_query_mode": "Режим последнего запроса",
+  "ui_last_query_mode_tips": "Выберите поведение по умолчанию при открытии Wox",
+  "ui_last_query_mode_preserve": "Сохранить последний запрос",
+  "ui_last_query_mode_empty": "Всегда начинать с пустого запроса",
   "ui_hide_on_lost_focus": "Скрывать при потере фокуса",
   "ui_hide_on_lost_focus_tips": "При выборе Wox будет скрываться при потере фокуса",
   "ui_hide_on_start": "Скрывать при запуске",
