--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -9,6 +9,10 @@
   "ui_selection_hotkey_tips": "用于在选定的文本或文件上执行操作的快捷键",
   "ui_use_pinyin": "使用拼音",
   "ui_use_pinyin_tips": "搜索时，把中文转换为拼音",
+  "ui_last_query_mode": "上次查询模式",
+  "ui_last_query_mode_tips": "选择打开Wox时的默认行为",
+  "ui_last_query_mode_preserve": "保留上次查询",
+  "ui_last_query_mode_empty": "总是从空查询开始",
   "ui_hide_on_lost_focus": "失去焦点时隐藏",
   "ui_hide_on_lost_focus_tips": "选中后，Wox失去焦点时将隐藏",
   "ui_hide_on_start": "启动时隐藏",
