feat(setting): add custom Python and Node.js path configuration, fix #4220
* Introduced settings for custom executable paths for Python and Node.js.
* Implemented validation for the provided paths to ensure they are executable.
* Updated UI to allow users to browse and set custom paths.
* Added corresponding translations for new UI elements in English and Chinese.

--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -58,6 +58,18 @@
   "ui_plugins": "插件",
   "ui_store_plugins": "插件商店",
   "ui_installed_plugins": "已安装插件",
+  "ui_runtime_settings": "运行时设置",
+  "ui_runtime_python_path": "Python 路径",
+  "ui_runtime_python_path_tips": "自定义 Python 可执行文件路径。留空则使用自动检测。",
+  "ui_runtime_python_path_placeholder": "例如：/usr/local/bin/python3",
+  "ui_runtime_nodejs_path": "Node.js 路径",
+  "ui_runtime_nodejs_path_tips": "自定义 Node.js 可执行文件路径。留空则使用自动检测。",
+  "ui_runtime_nodejs_path_placeholder": "例如：/usr/local/bin/node",
+  "ui_runtime_browse": "浏览",
+  "ui_runtime_clear": "清除",
+  "ui_runtime_validating": "正在验证...",
+  "ui_runtime_validation_failed": "无效的可执行文件",
+  "ui_runtime_validation_error": "验证错误",
   "ui_themes": "主题",
   "ui_store_themes": "主题商店",
   "ui_installed_themes": "已安装主题",
