--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -58,6 +58,18 @@
   "ui_plugins": "Plugins",
   "ui_store_plugins": "Store Plugins",
   "ui_installed_plugins": "Installed Plugins",
+  "ui_runtime_settings": "Runtime Settings",
+  "ui_runtime_python_path": "Python Path",
+  "ui_runtime_python_path_tips": "Custom Python executable path. Leave empty to use auto-detection.",
+  "ui_runtime_python_path_placeholder": "e.g., /usr/local/bin/python3",
+  "ui_runtime_nodejs_path": "Node.js Path",
+  "ui_runtime_nodejs_path_tips": "Custom Node.js executable path. Leave empty to use auto-detection.",
+  "ui_runtime_nodejs_path_placeholder": "e.g., /usr/local/bin/node",
+  "ui_runtime_browse": "Browse",
+  "ui_runtime_clear": "Clear",
+  "ui_runtime_validating": "Validating...",
+  "ui_runtime_validation_failed": "Invalid executable",
+  "ui_runtime_validation_error": "Validation error",
   "ui_themes": "Themes",
   "ui_store_themes": "Store Themes",
   "ui_installed_themes": "Installed Themes",
