feat(setting): enhance auto backup tips with folder link and dynamic content #4222
* Updated backup tips to include a link to the backup folder.
* Added a new method `getBackupFolder` to retrieve the backup directory.
* Modified the `formField` to accept custom tips for better flexibility.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -140,7 +140,10 @@
   "ui_cancel": "Cancel",
   "ui_delete": "Delete",
   "ui_data_backup_auto_title": "Auto Backup",
-  "ui_data_backup_auto_tips": "Enable auto backup to backup your data daily",
+  "ui_data_backup_auto_tips": "Enable auto backup to backup your data daily in data folder",
+  "ui_data_backup_auto_tips_prefix": "Enable auto backup to backup your data daily in",
+  "ui_data_backup_folder_link": "backup folder",
+  "ui_data_backup_auto_tips_suffix": "",
   "ui_data_backup_list_title": "Backup List",
   "ui_data_backup_now": "Backup Now",
   "ui_data_backup_refresh": "Refresh",
