--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -126,7 +126,10 @@
   "ui_cancel": "Cancelar",
   "ui_delete": "Excluir",
   "ui_data_backup_auto_title": "Backup automático",
-  "ui_data_backup_auto_tips": "Habilitar backup automático para salvar as configurações do Wox diariamente",
+  "ui_data_backup_auto_tips": "Habilitar backup automático para salvar as configurações do Wox diariamente na pasta data",
+  "ui_data_backup_auto_tips_prefix": "Habilitar backup automático para salvar dados diariamente na",
+  "ui_data_backup_folder_link": "pasta de backup",
+  "ui_data_backup_auto_tips_suffix": "",
   "ui_data_backup_list_title": "Lista de backups",
   "ui_data_backup_now": "Fazer backup agora",
   "ui_data_backup_refresh": "Atualizar",
