--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -126,7 +126,10 @@
   "ui_cancel": "Отмена",
   "ui_delete": "Удалить",
   "ui_data_backup_auto_title": "Автоматическая резервная копия",
-  "ui_data_backup_auto_tips": "Включить автоматическую резервную копию для ежедневного резервного копирования настроек Wox",
+  "ui_data_backup_auto_tips": "Включить автоматическую резервную копию для ежедневного резервного копирования настроек Wox в папку data",
+  "ui_data_backup_auto_tips_prefix": "Включить автоматическое резервное копирование данных ежедневно в",
+  "ui_data_backup_folder_link": "папку резервных копий",
+  "ui_data_backup_auto_tips_suffix": "",
   "ui_data_backup_list_title": "Список резервных копий",
   "ui_data_backup_now": "Сделать резервную копию сейчас",
   "ui_data_backup_refresh": "Обновить",
