--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -140,7 +140,10 @@
   "ui_cancel": "取消",
   "ui_delete": "删除",
   "ui_data_backup_auto_title": "自动备份",
-  "ui_data_backup_auto_tips": "启用自动备份，每天备份一次Wox设置",
+  "ui_data_backup_auto_tips": "启用自动备份，每天在data文件夹中备份一次Wox设置",
+  "ui_data_backup_auto_tips_prefix": "启用自动备份，每天在",
+  "ui_data_backup_folder_link": "备份文件夹",
+  "ui_data_backup_auto_tips_suffix": "中备份数据",
   "ui_data_backup_list_title": "备份列表",
   "ui_data_backup_now": "立即备份",
   "ui_data_backup_refresh": "刷新",
