feat(mru): Implement Most Recently Used (MRU) functionality across plugins
- Added MRU support to SysPlugin and UrlPlugin, allowing users to access recently used commands and URLs.
- Introduced new data structures for MRU items and context data.
- Updated the query methods to include MRU results based on user settings.
- Modified the settings management to accommodate the new query mode for MRU.
- Enhanced the UI to reflect the changes in query modes and added relevant translations.
- Created a dedicated MRU manager for handling MRU items in the database.
- Updated Flutter UI to support MRU queries and settings.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -9,10 +9,11 @@
   "ui_selection_hotkey_tips": "Hotkeys to do actions on selected text or files",
   "ui_use_pinyin": "Use Pinyin",
   "ui_use_pinyin_tips": "When selected, Wox will convert Chinese into Pinyin",
-  "ui_last_query_mode": "Last Query Mode",
-  "ui_last_query_mode_tips": "Choose the default behavior when opening Wox",
-  "ui_last_query_mode_preserve": "Preserve last query",
-  "ui_last_query_mode_empty": "Always start with empty query",
+  "ui_query_mode": "Query Mode",
+  "ui_query_mode_tips": "Choose the default behavior when opening Wox",
+  "ui_query_mode_preserve": "Preserve last query",
+  "ui_query_mode_empty": "Always start with empty query",
+  "ui_query_mode_mru": "Show most recently used items",
   "ui_hide_on_lost_focus": "Hide on lost focus",
   "ui_hide_on_lost_focus_tips": "When selected, Wox will hide when it loses focus",
   "ui_hide_on_start": "Hide on start",
@@ -386,6 +387,7 @@
   "plugin_ai_chat_default_model_tooltip": "The default model to use for this command",
   "plugin_ai_chat_enable_fallback_search": "Fallback Search",
   "plugin_ai_chat_enable_fallback_search_tooltip": "When enabled, if the query result is empty, Wox will return a result of 'use AI Chat for %s'",
+  "plugin_app_open_failed_description": "Failed to open: %s",
   "plugin_ai_chat_fallback_search_chat_for": "Use AI Chat for %s",
   "plugin_ai_chat_start_chat": "Start Chat",
   "plugin_ai_chat_enable_auto_focus_to_chat_input": "Auto focus to chat input when open with query hotkey",
