--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -13,6 +13,9 @@
   "ui_last_query_mode_tips": "Выберите поведение по умолчанию при открытии Wox",
   "ui_last_query_mode_preserve": "Сохранить последний запрос",
   "ui_last_query_mode_empty": "Всегда начинать с пустого запроса",
+  "ui_last_query_mode_mru": "Показать недавно использованные элементы",
+  "ui_last_query_mode_preserve": "Сохранить последний запрос",
+  "ui_last_query_mode_empty": "Всегда начинать с пустого запроса",
   "ui_hide_on_lost_focus": "Скрывать при потере фокуса",
   "ui_hide_on_lost_focus_tips": "При выборе Wox будет скрываться при потере фокуса",
   "ui_hide_on_start": "Скрывать при запуске",
