--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -9,10 +9,11 @@
   "ui_selection_hotkey_tips": "用于在选定的文本或文件上执行操作的快捷键",
   "ui_use_pinyin": "使用拼音",
   "ui_use_pinyin_tips": "搜索时，把中文转换为拼音",
-  "ui_last_query_mode": "上次查询模式",
-  "ui_last_query_mode_tips": "选择打开Wox时的默认行为",
-  "ui_last_query_mode_preserve": "保留上次查询",
-  "ui_last_query_mode_empty": "总是从空查询开始",
+  "ui_query_mode": "查询模式",
+  "ui_query_mode_tips": "选择打开Wox时的默认行为",
+  "ui_query_mode_preserve": "保留上次查询",
+  "ui_query_mode_empty": "总是从空查询开始",
+  "ui_query_mode_mru": "显示最近使用的项目",
   "ui_hide_on_lost_focus": "失去焦点时隐藏",
   "ui_hide_on_lost_focus_tips": "选中后，Wox失去焦点时将隐藏",
   "ui_hide_on_start": "启动时隐藏",
@@ -386,6 +387,11 @@
   "plugin_ai_chat_default_model_tooltip": "用于对话的默认模型",
   "plugin_ai_chat_enable_fallback_search": "回退搜索",
   "plugin_ai_chat_enable_fallback_search_tooltip": "当查询结果为空时，Wox 将返回一个 '使用 AI Chat 查询 %s' 的结果",
+  "plugin_app_open": "打开",
+  "plugin_app_open_containing_folder": "打开所在文件夹",
+  "plugin_app_copy_path": "复制路径",
+  "plugin_app_terminate": "终止进程",
+  "plugin_app_open_failed_description": "打开失败：%s",
   "plugin_ai_chat_fallback_search_chat_for": "使用 AI Chat 查询 %s",
   "plugin_ai_chat_start_chat": "开始对话",
   "plugin_ai_chat_enable_auto_focus_to_chat_input": "使用查询快捷键打开时自动聚焦到对话输入框",
