--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -13,6 +13,9 @@
   "ui_last_query_mode_tips": "Escolha o comportamento padrão ao abrir o Wox",
   "ui_last_query_mode_preserve": "Preservar última consulta",
   "ui_last_query_mode_empty": "Sempre começar com consulta vazia",
+  "ui_last_query_mode_mru": "Mostrar itens usados recentemente",
+  "ui_last_query_mode_preserve": "Preservar última consulta",
+  "ui_last_query_mode_empty": "Sempre começar com consulta vazia",
   "ui_hide_on_lost_focus": "Ocultar na perda do foco",
   "ui_hide_on_lost_focus_tips": "Quando selecionado, o Wox será ocultado na perda do foco",
   "ui_hide_on_start": "Ocultar ao iniciar",
