plugin(mediaplayer): add media player plugin [WIP]
- Added DarwinRetriever for macOS using Perl script to bypass MediaRemote restrictions, allowing retrieval of media information and control.
- Implemented LinuxRetriever utilizing MPRIS to interact with media players, fetching current media info and playback state.
- Developed WindowsRetriever to gather media info from PowerShell and window titles, supporting popular media applications.
- Created MediaInfo struct to standardize media data across platforms, including title, artist, album, duration, position, state, app name, and artwork.
- Introduced WoxMR Perl XS bridge to access MediaRemote on macOS, enabling seamless integration with Wox.
- Added adapter.pl script to facilitate communication between Wox and the WoxMR module.
- Included Makefile.PL for building the WoxMR Perl module and associated Objective-C code.
- Documented the WoxMR functionality and build process in README.md for clarity and ease of use.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -397,5 +397,8 @@
   "ui_about_version": "Version",
   "ui_about_docs": "Docs",
   "ui_about_github": "GitHub",
-  "ui_about_description": "Wox is a launcher for Windows, macOS and Linux that simply works."
+  "ui_about_description": "Wox is a launcher for Windows, macOS and Linux that simply works.",
+  "plugin_mediaplayer_toggle": "Play/Pause",
+  "plugin_mediaplayer_copy_info": "Copy info",
+  "plugin_mediaplayer_no_media": "No media"
 }
