--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -199,10 +199,16 @@
   "ui_ai_chat_no_user_message_to_regenerate": "未找到用户消息以重新生成回复",
   "ui_max_result_count": "最大结果数",
   "ui_max_result_count_tips": "显示在列表中的最大结果数量（5-15项）",
+  "ui_about": "关于",
+  "ui_about_version": "版本",
+  "ui_about_docs": "文档",
+  "ui_about_github": "GitHub",
+  "ui_about_description": "Wox 是一个适用于 Windows、macOS 和 Linux 的启动器，简单易用。",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
   "plugin_app_terminate": "终止",
+  "plugin_app_open_failed_description": "打开失败：%s",
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
   "plugin_clipboard_copy_date": "复制日期",
   "plugin_clipboard_copy_characters": "复制字符",
@@ -388,21 +394,14 @@
   "plugin_ai_chat_default_model_tooltip": "用于对话的默认模型",
   "plugin_ai_chat_enable_fallback_search": "回退搜索",
   "plugin_ai_chat_enable_fallback_search_tooltip": "当查询结果为空时，Wox 将返回一个 '使用 AI Chat 查询 %s' 的结果",
-  "plugin_app_open": "打开",
-  "plugin_app_open_containing_folder": "打开所在文件夹",
-  "plugin_app_copy_path": "复制路径",
-  "plugin_app_terminate": "终止进程",
-  "plugin_app_open_failed_description": "打开失败：%s",
   "plugin_ai_chat_fallback_search_chat_for": "使用 AI Chat 查询 %s",
   "plugin_ai_chat_start_chat": "开始对话",
   "plugin_ai_chat_enable_auto_focus_to_chat_input": "使用查询快捷键打开时自动聚焦到对话输入框",
   "plugin_ai_chat_enable_auto_focus_to_chat_input_tooltip": "当启用时，Wox 将在使用查询快捷键打开时自动聚焦到对话输入框，这将允许您立即输入查询",
-  "ui_about": "关于",
-  "ui_about_version": "版本",
-  "ui_about_docs": "文档",
-  "ui_about_github": "GitHub",
-  "ui_about_description": "Wox 是一个适用于 Windows、macOS 和 Linux 的启动器，简单易用。",
   "plugin_mediaplayer_toggle": "播放/暂停",
   "plugin_mediaplayer_copy_info": "复制信息",
-  "plugin_mediaplayer_no_media": "没有正在播放的媒体"
+  "plugin_mediaplayer_no_media": "没有正在播放的媒体",
+  "plugin_mediaplayer_artist": "艺术家",
+  "plugin_mediaplayer_album": "专辑",
+  "plugin_mediaplayer_duration": "时长"
 }
