feat(plugin): enhance script plugin handling and add runtime support
* Improved error logging in `Query` method to include raw request data.
* Added support for `runtime` property in `PluginDetail` class.
* Updated icon handling to use `emoji:` format in metadata and templates.
* Introduced `WoxPluginRuntimeEnum` for better runtime type management.
* Added new script tag in UI settings for non-system script plugins.
* Updated localization files to include new script tag translations.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -136,6 +136,7 @@
   "ui_plugin_command_name_column": "Name",
   "ui_plugin_command_desc_column": "Description",
   "ui_setting_plugin_system_tag": "System",
+  "ui_setting_plugin_script_tag": "Script",
   "ui_setting_plugin_empty_data": "Plugin data is empty",
   "ui_delete_row_confirm": "Are you sure you want to delete this row?",
   "ui_cancel": "Cancel",
