feat(ui): enhance image editor with emoji and upload functionality
* Added new buttons for emoji selection and image upload in the image editor.
* Updated the tooltip width calculation to accommodate new features.
* Improved layout and styling for better user experience.
* Adjusted column widths in various settings tables for consistency.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -205,6 +205,8 @@
   "ui_about_docs": "Docs",
   "ui_about_github": "GitHub",
   "ui_about_description": "Wox is a launcher for Windows, macOS and Linux that simply works.",
+  "ui_image_editor_emoji": "Emoji",
+  "ui_image_editor_upload_image": "Upload Image",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
