--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -264,6 +264,15 @@
   "plugin_doctor_accessibility_granted": "You have granted Wox Accessibility permission",
   "plugin_doctor_accessibility_explanation": "# Why Wox Needs Accessibility Permission\n\nWox requires accessibility permission to perform the following functions:\n\n- **Global Hotkeys**: Allow you to activate Wox from anywhere using keyboard shortcuts\n- **Window Management**: Get information about active windows to provide context-aware results\n- **Keyboard Simulation**: Enable features like pasting results directly into applications\n\nWithout this permission, some features of Wox will be limited or unavailable.",
   "plugin_doctor_check": "Check",
+  "plugin_doctor_database": "Database integrity",
+  "plugin_doctor_database_not_run": "Integrity checks not run",
+  "plugin_doctor_database_ok": "Database integrity: OK",
+  "plugin_doctor_database_desc_quickcheck": "quick_check issues: %d",
+  "plugin_doctor_database_desc_fk": "foreign key violations: %d",
+  "plugin_doctor_database_desc_tables": "affected tables: %s",
+  "plugin_doctor_database_action": "Show fix guidance",
+  "plugin_doctor_database_fix_guidance": "Your database may be corrupted. If your data directory is on iCloud/Dropbox, move it to a local path. Then rebuild the database or reset affected tables (e.g., MRU).",
+  "plugin_mediaplayer_duration": "Duration",
   "plugin_query_history_use": "Use",
   "plugin_browser_open_tab": "Open",
   "plugin_browser_server_port": "Server Port",
@@ -405,6 +414,5 @@
   "plugin_mediaplayer_copy_info": "Copy info",
   "plugin_mediaplayer_no_media": "No media",
   "plugin_mediaplayer_artist": "Artist",
-  "plugin_mediaplayer_album": "Album",
-  "plugin_mediaplayer_duration": "Duration"
+  "plugin_mediaplayer_album": "Album"
 }
