--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -252,6 +252,14 @@
   "plugin_doctor_accessibility_granted": "Você concedeu permissão de Acessibilidade ao Wox",
   "plugin_doctor_accessibility_explanation": "# Por que o Wox precisa de permissão de Acessibilidade\n\nO Wox requer permissão de acessibilidade para realizar as seguintes funções:\n\n- **Teclas de atalho globais**: Permite ativar o Wox de qualquer lugar usando atalhos de teclado\n- **Gerenciamento de janelas**: Obter informações sobre janelas ativas para fornecer resultados contextuais\n- **Simulação de teclado**: Habilitar recursos como colar resultados diretamente em aplicativos\n\nSem essa permissão, alguns recursos do Wox serão limitados ou indisponíveis.",
   "plugin_doctor_check": "Verificar",
+  "plugin_doctor_database": "Integridade do banco de dados",
+  "plugin_doctor_database_not_run": "Verificações de integridade não executadas",
+  "plugin_doctor_database_ok": "Integridade do banco de dados: OK",
+  "plugin_doctor_database_desc_quickcheck": "problemas no quick_check: %d",
+  "plugin_doctor_database_desc_fk": "violações de chave estrangeira: %d",
+  "plugin_doctor_database_desc_tables": "tabelas afetadas: %s",
+  "plugin_doctor_database_action": "Mostrar orientação de correção",
+  "plugin_doctor_database_fix_guidance": "Possível inconsistência no banco de dados detectada (geralmente ocorre quando o banco de dados está em uma pasta com sincronização em nuvem). Recomendamos restaurar o banco de dados a partir de um backup e evitar colocar o diretório de dados em iCloud/Dropbox ou caminhos de sincronização semelhantes. Erros detalhados foram registrados nos logs.",
   "plugin_query_history_use": "Usar",
   "plugin_browser_open_tab": "Abrir",
   "plugin_browser_server_port": "Porta do servidor",
