--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -252,6 +252,14 @@
   "plugin_doctor_accessibility_granted": "Вы предоставили Wox разрешение на доступность",
   "plugin_doctor_accessibility_explanation": "# Почему Wox нуждается в разрешении на доступность\n\nWox требует разрешение на доступность для выполнения следующих функций:\n\n- **Глобальные горячие клавиши**: Позволяют активировать Wox из любого места с помощью сочетаний клавиш\n- **Управление окнами**: Получение информации об активных окнах для предоставления контекстно-зависимых результатов\n- **Эмуляция клавиатуры**: Включение функций, таких как вставка результатов непосредственно в приложения\n\nБез этого разрешения некоторые функции Wox будут ограничены или недоступны.",
   "plugin_doctor_check": "Проверить",
+  "plugin_doctor_database": "Целостность базы данных",
+  "plugin_doctor_database_not_run": "Проверки целостности не выполнены",
+  "plugin_doctor_database_ok": "Целостность базы данных: ОК",
+  "plugin_doctor_database_desc_quickcheck": "проблемы quick_check: %d",
+  "plugin_doctor_database_desc_fk": "нарушения внешних ключей: %d",
+  "plugin_doctor_database_desc_tables": "затронутые таблицы: %s",
+  "plugin_doctor_database_action": "Показать рекомендации по исправлению",
+  "plugin_doctor_database_fix_guidance": "Обнаружена возможная несогласованность базы данных (часто происходит, если база данных хранится в папке, синхронизируемой с облаком). Рекомендуется восстановить базу данных из резервной копии и избегать размещения каталога данных в iCloud/Dropbox или аналогичных путях синхронизации. Подробные ошибки записаны в журнал.",
   "plugin_query_history_use": "Использовать",
   "plugin_browser_open_tab": "Открыть",
   "plugin_browser_server_port": "Порт сервера",
